feat: ensure gateway instances are deleted before gateway definitions
